[editor Port] Fix output port alignments when more outputs than inputs.

--- a/app/src/editor/components/Module.pcss
+++ b/app/src/editor/components/Module.pcss
@@ -60,7 +60,7 @@
   width: 100%;
 }
 
-.ports .portName.output {
+.ports .portName.isOutput {
   text-align: right;
 }
 
